<resources>
    <string name="app_name">JGC Movies</string>
    <string name="count_text">The button has not been pressed yet!</string>
    <string name="first_button">First Button</string>
    <string name="button_pressed">Button has been pressed!</string>
    <string name="toprofile_buttom">Go to Profile</string>
    <string name="back_buttom">Go Back</string>
    <string name="image_profile">image of profile</string>
    <string name="city">City:</string>
    <string name="age">Age:</string>
    <string name="description">Description:</string>
    <string name="movieImageView">Movie Image</string>
    <string name="releasedate">Release Date:</string>
    <string name="overview">Overview:</string>
    <string name="tomovielist_buttom">Go to Movie List</string>
    <string name="tomoviedetail_buttom">Go to Movie Detail</string>
    <string name="title_movielist">Movie List</string>
    <string name="title_main">Main</string>
    <string name="title_moviedetail">Movie Detail</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="entermovies">Enter Movies</string>
    <string name="popularity">Popularity:</string>
    <string name="adult">Only Adult:</string>
    <string name="genres">Genres:</string>
    <string name="director">Director:</string>
    <string name="cast">Cast:</string>
    <string name="add_button">Add button</string>
    <string name="fav_button">fav_button</string>
    <string name="share_button">share_button</string>
    <string name="nogenres">No Genres</string>
    <string name="nocast">No cast</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="password_edit_hint">1234</string>
    <string name="username_edit_hint">root</string>
    <string name="logout_item">Logout</string>
    <string name="delete_all_item">Delete All</string>
    <string name="by_title">By title</string>
    <string name="by_date_added">By date added</string>
    <string name="toorder_item">To Order</string>
    <string name="logo_app_image_login">Logo App Image Login</string>
</resources>
